@@ -13,9 +13,8 @@ import net.minestom.server.entity.Player;
 import net.minestom.server.instance.Instance;
 import net.minestom.server.network.ConnectionManager;
 import net.minestom.server.utils.MathUtils;
-import net.minestom.server.utils.math.IntRange;
+import net.minestom.server.utils.Range;
 import net.minestom.server.utils.validate.Check;
-import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
@@ -37,7 +36,7 @@ public class EntityFinder {
     // Position
     private Point startPosition;
     private Float dx, dy, dz;
-    private IntRange distance;
+    private Range.Int distance;
 
     // By traits
     private Integer limit;
@@ -50,24 +49,24 @@ public class EntityFinder {
 
     // Players specific
     private final ToggleableMap<GameMode> gameModes = new ToggleableMap<>();
-    private IntRange level;
+    private Range.Int level;
 
-    public EntityFinder setTargetSelector(@NotNull TargetSelector targetSelector) {
+    public EntityFinder setTargetSelector(TargetSelector targetSelector) {
         this.targetSelector = targetSelector;
         return this;
     }
 
-    public EntityFinder setEntitySort(@NotNull EntitySort entitySort) {
+    public EntityFinder setEntitySort(EntitySort entitySort) {
         this.entitySort = entitySort;
         return this;
     }
 
-    public EntityFinder setStartPosition(@NotNull Point startPosition) {
+    public EntityFinder setStartPosition(Point startPosition) {
         this.startPosition = startPosition;
         return this;
     }
 
-    public EntityFinder setDistance(@NotNull IntRange distance) {
+    public EntityFinder setDistance(Range.Int distance) {
         this.distance = distance;
         return this;
     }
@@ -77,37 +76,37 @@ public class EntityFinder {
         return this;
     }
 
-    public EntityFinder setLevel(@NotNull IntRange level) {
+    public EntityFinder setLevel(Range.Int level) {
         this.level = level;
         return this;
     }
 
-    public EntityFinder setEntity(@NotNull EntityType entityType, @NotNull ToggleableType toggleableType) {
+    public EntityFinder setEntity(EntityType entityType, ToggleableType toggleableType) {
         this.entityTypes.put(entityType, toggleableType.getValue());
         return this;
     }
 
-    public EntityFinder setConstantName(@NotNull String constantName) {
+    public EntityFinder setConstantName(String constantName) {
         this.constantName = constantName;
         return this;
     }
 
-    public EntityFinder setConstantUuid(@NotNull UUID constantUuid) {
+    public EntityFinder setConstantUuid(UUID constantUuid) {
         this.constantUuid = constantUuid;
         return this;
     }
 
-    public EntityFinder setName(@NotNull String name, @NotNull ToggleableType toggleableType) {
+    public EntityFinder setName(String name, ToggleableType toggleableType) {
         this.names.put(name, toggleableType.getValue());
         return this;
     }
 
-    public EntityFinder setUuid(@NotNull UUID uuid, @NotNull ToggleableType toggleableType) {
+    public EntityFinder setUuid(UUID uuid, ToggleableType toggleableType) {
         this.uuids.put(uuid, toggleableType.getValue());
         return this;
     }
 
-    public EntityFinder setGameMode(@NotNull GameMode gameMode, @NotNull ToggleableType toggleableType) {
+    public EntityFinder setGameMode(GameMode gameMode, ToggleableType toggleableType) {
         this.gameModes.put(gameMode, toggleableType.getValue());
         return this;
     }
@@ -127,7 +126,7 @@ public class EntityFinder {
      * @param self     the source of the query, null if not any
      * @return all entities validating the conditions, can be empty
      */
-    public @NotNull List<@NotNull Entity> find(@Nullable Instance instance, @Nullable Entity self) {
+    public List<Entity> find(@Nullable Instance instance, @Nullable Entity self) {
         if (targetSelector == TargetSelector.MINESTOM_USERNAME) {
             Check.notNull(constantName, "The player name should not be null when searching for it");
             final Player player = MinecraftServer.getConnectionManager().getOnlinePlayerByUsername(constantName);
@@ -148,8 +147,8 @@ public class EntityFinder {
 
         // Distance argument
         if (distance != null) {
-            final int minDistance = distance.getMinimum();
-            final int maxDistance = distance.getMaximum();
+            final int minDistance = distance.min();
+            final int maxDistance = distance.max();
             result = result.stream()
                     .filter(entity -> MathUtils.isBetween(entity.getPosition().distanceSquared(pos), minDistance * minDistance, maxDistance * maxDistance))
                     .toList();
@@ -195,8 +194,8 @@ public class EntityFinder {
 
         // Level
         if (level != null) {
-            final int minLevel = level.getMinimum();
-            final int maxLevel = level.getMaximum();
+            final int minLevel = level.min();
+            final int maxLevel = level.max();
             result = result.stream()
                     .filter(Player.class::isInstance)
                     .filter(entity -> MathUtils.isBetween(((Player) entity).getLevel(), minLevel, maxLevel))
@@ -244,7 +243,7 @@ public class EntityFinder {
         return result;
     }
 
-    public @NotNull List<@NotNull Entity> find(@NotNull CommandSender sender) {
+    public List<Entity> find(CommandSender sender) {
         return sender instanceof Player player ?
                 find(player.getInstance(), player) : find(null, null);
     }
@@ -266,7 +265,7 @@ public class EntityFinder {
         return null;
     }
 
-    public @Nullable Player findFirstPlayer(@NotNull CommandSender sender) {
+    public @Nullable Player findFirstPlayer(CommandSender sender) {
         return sender instanceof Player player ?
                 findFirstPlayer(player.getInstance(), player) :
                 findFirstPlayer(null, null);
@@ -274,16 +273,16 @@ public class EntityFinder {
 
     public @Nullable Entity findFirstEntity(@Nullable Instance instance, @Nullable Entity self) {
         final List<Entity> entities = find(instance, self);
-        return entities.isEmpty() ? null : entities.get(0);
+        return entities.isEmpty() ? null : entities.getFirst();
     }
 
-    public @Nullable Entity findFirstEntity(@NotNull CommandSender sender) {
+    public @Nullable Entity findFirstEntity(CommandSender sender) {
         return sender instanceof Player player ?
                 findFirstEntity(player.getInstance(), player) : findFirstEntity(null, null);
     }
 
     public enum TargetSelector {
-        NEAREST_PLAYER, RANDOM_PLAYER, ALL_PLAYERS, ALL_ENTITIES, SELF, MINESTOM_USERNAME, MINESTOM_UUID
+        NEAREST_PLAYER, RANDOM_PLAYER, ALL_PLAYERS, ALL_ENTITIES, SELF, MINESTOM_USERNAME, MINESTOM_UUID, NEAREST_ENTITY
     }
 
     public enum EntitySort {
@@ -307,14 +306,20 @@ public class EntityFinder {
     private static class ToggleableMap<T> extends Object2BooleanOpenHashMap<T> {
     }
 
-    private static @NotNull List<@NotNull Entity> findTarget(@Nullable Instance instance,
-                                                             @NotNull TargetSelector targetSelector,
-                                                             @NotNull Point startPosition, @Nullable Entity self) {
+    private static List<Entity> findTarget(@Nullable Instance instance,
+                                                             TargetSelector targetSelector,
+                                                             Point startPosition, @Nullable Entity self) {
         final var players = instance != null ? instance.getPlayers() : CONNECTION_MANAGER.getOnlinePlayers();
         if (targetSelector == TargetSelector.NEAREST_PLAYER) {
             return players.stream()
                     .min(Comparator.comparingDouble(p -> p.getPosition().distanceSquared(startPosition)))
                     .<List<Entity>>map(Collections::singletonList).orElse(List.of());
+        } else if (targetSelector == TargetSelector.NEAREST_ENTITY) {
+            List<Entity> entities = findTarget(instance, TargetSelector.ALL_ENTITIES, startPosition, self);
+
+            return entities.stream()
+                    .min(Comparator.comparingDouble(p -> p.getPosition().distanceSquared(startPosition)))
+                    .map(Collections::singletonList).orElse(List.of());
         } else if (targetSelector == TargetSelector.RANDOM_PLAYER) {
             final int index = ThreadLocalRandom.current().nextInt(players.size());
             final Player player = players.stream().skip(index).findFirst().orElseThrow();
@@ -338,7 +343,7 @@ public class EntityFinder {
         throw new IllegalStateException("Weird thing happened: " + targetSelector);
     }
 
-    private static <T> boolean filterToggleableMap(@NotNull T value, @NotNull ToggleableMap<T> map) {
+    private static <T> boolean filterToggleableMap(T value, ToggleableMap<T> map) {
         for (var entry : Object2BooleanMaps.fastIterable(map)) {
             if (entry.getBooleanValue() != Objects.equals(value, entry.getKey())) {
                 return false;
